# practica-dms-2020-2021

./: .env  .pylintrc  README.md
components/dms2021auth/: README.md  install.sh  setup.cfg  start.sh
components/dms2021auth/dms2021auth/: __init__.py
components/dms2021auth/dms2021auth/data/config/: __init__.py  authconfiguration.py
components/dms2021auth/dms2021auth/data/db/: __init__.py  schema.py
components/dms2021auth/dms2021auth/logic/: __init__.py  managerbase.py  usermanager.py  userrightmanager.py  userrightvalidator.py  usersessionmanager.py
components/dms2021auth/dms2021auth/logic/exc/: __init__.py  insufficientrightserror.py  invalidcredentialserror.py
components/dms2021auth/dms2021auth/presentation/rest/: __init__.py  user.py  userright.py  usersession.py
components/dms2021client/: README.md  setup.cfg  start.sh
components/dms2021client/dms2021client/: __init__.py
components/dms2021client/dms2021client/data/config/: __init__.py  clientconfiguration.py
components/dms2021client/dms2021client/data/rest/: __init__.py  authservice.py
components/dms2021client/dms2021client/logic/: __init__.py
components/dms2021core/: README.md  install.sh  setup.cfg
components/dms2021core/dms2021core/: __init__.py
components/dms2021core/dms2021core/data/: __init__.py  userrightname.py
components/dms2021core/dms2021core/data/config/: __init__.py  configuration.py
components/dms2021core/dms2021core/data/rest/: __init__.py  restresponse.py
components/dms2021sensor/: README.md  setup.cfg  start.sh
components/dms2021sensor/dms2021sensor/: __init__.py
components/dms2021sensor/dms2021sensor/logic/: __init__.py
scripts/: verify-commit.sh  verify-style.sh  (+1 more)
(+27 files in other folders)
