[metadata]
name = dms2021auth
version = attr: dms2021auth.VERSION
description = DMS 2020-2021 authentication service
long_description = file: README.md
keywords = dms, ubu, auth, authentication, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2021auth
    bin/dms2021auth-create-admin
install_requires = sqlalchemy; flask; dms2021core
