[metadata]
name = dms2021client
version = attr: dms2021client.VERSION
description = DMS 2020-2021 client service
long_description = file: README.md
keywords = dms, ubu, client, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2021client
install_requires = dms2021core
