[metadata]
name = dms2021core
version = attr: dms2021core.VERSION
description = DMS 2020-2021 core functionalities library
long_description = file: README.md
keywords = dms, ubu, core, library
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires = appdirs; pyyaml
