[metadata]
name = dms2021sensor
version = attr: dms2021sensor.VERSION
description = DMS 2020-2021 sensor service
long_description = file: README.md
keywords = dms, ubu, sensor, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2021sensor
install_requires = sqlalchemy; flask; dms2021core
